# lab4_ccbda

./: .gitignore  README.md  compose.yml  docker-compose.test.yml  env.example
.github/workflows/: backend.yml  frontend.yml
backend/: Dockerfile  Dockerfile_testing  pyproject.toml
backend/src/: __init__.py  library.py  main.py
backend/tests/: conftest.py  test_main.py
frontend/: Dockerfile  package-lock.json  package.json
frontend/src/pages/: _document.jsx  index.jsx
frontend/src/styles/: globals.css
housekeeping/: ebcreate.py  newVersion.py  package-lock.json  publishFrontend.sh  setup_infrastructure.py  updateGitHubSecrets.py
housekeeping/elasticbeanstalk/: .gitignore  Dockerrun.aws.json  kk.json
